Bug-35812 - title left alignment done for the landing and case study page

--- a/css/main.css
+++ b/css/main.css
@@ -6389,3 +6389,11 @@ blockquote p:has(cite) p::before {
 .pdng-right-0px{
   padding-right: 0px !important;
 }
+
+.ml-5{
+    margin-left: 5% !important;
+}
+
+.ml-4{
+    margin-left: 4% !important;
+}
